crates/jolt_kotlin_fmt/tests/snapshots/corpus_fixtures__maplibre_compose_formatter_summary.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus_fixtures.rs
expression: maplibre_summary.render()
---
suite: maplibre-compose
files: 485
formatted: 485
syntax blocked: 0
reconstructed changed: 0

diagnostics:
  <none>: 0
